--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "generate-examples": "run-p generate-examples:*"
   },
   "dependencies": {
-    "@types/handlebars": "^4.0.38",
+    "@types/handlebars": "^4.0.39",
     "ajv": "^6.5.4",
     "chalk": "^2.0.1",
     "handlebars": "^4.0.11",
@@ -59,6 +59,7 @@
     "json-schema": "^0.2.3",
     "json-schema-to-typescript": "^5.5.0",
     "lodash": "^4.17.10",
+    "node-fetch": "^2.2.0",
     "npm-run-all": "^4.1.3",
     "omit-deep-lodash": "^1.1.2",
     "quicktype": "^15.0.130",
@@ -69,12 +70,19 @@
     "yargs": "^12.0.2"
   },
   "devDependencies": {
-    "@types/chalk": "^0.4.31",
-    "@types/jest": "^20.0.8",
+    "@types/ajv": "^1.0.0",
+    "@types/chalk": "^2.2.0",
+    "@types/jest": "^23.3.5",
+    "@types/json-schema": "^7.0.1",
+    "@types/lodash": "^4.14.117",
     "@types/node": "^8.0.14",
     "@types/node-emoji": "^1.4.0",
+    "@types/node-fetch": "^2.1.2",
+    "@types/prettier": "^1.13.2",
+    "@types/request": "^2.47.1",
     "@types/request-promise-native": "^1.0.15",
-    "@types/yargs": "^8.0.1",
+    "@types/typescript": "^2.0.0",
+    "@types/yargs": "^12.0.1",
     "bdd-stdin": "^0.2.0",
     "jest": "^23.6",
     "jest-file-snapshot": "^0.0.2",
