--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "generate-examples:ios": "cd examples/ios/objectivec && make typewriter-local",
     "generate-examples:js": "cd examples/js && yarn run typewriter-local",
     "generate-examples:ts": "cd examples/ts && yarn run typewriter-local",
-    "generate-examples": "run-p generate-examples:*"
+    "generate-examples": "run-p generate-examples:*",
+    "docs": "md-magic --path '**/*.md' --ignore 'node_modules'"
   },
   "dependencies": {
     "@types/handlebars": "^4.0.39",
@@ -59,6 +60,7 @@
     "json-schema": "^0.2.3",
     "json-schema-to-typescript": "^5.5.0",
     "lodash": "^4.17.10",
+    "markdown-magic": "^0.1.25",
     "node-fetch": "^2.2.0",
     "npm-run-all": "^4.1.3",
     "omit-deep-lodash": "^1.1.2",
