Protect against releasing stale builds

--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "test": "jest",
     "update-snapshots": "jest -u",
     "watch": "tsc -w",
-    "build": "tsc",
+    "build": "rm -rf dist && tsc",
     "lint": "tslint src/**/*.ts",
     "precommit": "lint-staged",
-    "release": "release-it",
+    "release": "yarn build && release-it",
     "generate-examples:android": "cd examples/android/java && make typewriter-local",
     "generate-examples:ios": "cd examples/ios/objectivec && make typewriter-local",
     "generate-examples:js": "node ./dist/index.js gen-js --inputPath ./examples/local-tracking-plans/tracking-plan-web.json --outputPath ./examples/js/pages/generated",
