--- a/examples/node/.gitignore
+++ b/examples/node/.gitignore
@@ -1,6 +1,3 @@
-# Created by https://www.gitignore.io/api/node
-
-### Node ###
 # Logs
 logs
 *.log
@@ -32,7 +29,7 @@ bower_components
 # node-waf configuration
 .lock-wscript
 
-# Compiled binary addons (http://nodejs.org/api/addons.html)
+# Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
 # Dependency directories
@@ -60,13 +57,5 @@ typings/
 # dotenv environment variables file
 .env
 
-
-# End of https://www.gitignore.io/api/node
-
-dist
-
+# next.js build output
 .next
-
-.rpt2_cache
-
-.DS_Store
