Fix broken generate-examples script

--- a/examples/ios/objectivec/Makefile
+++ b/examples/ios/objectivec/Makefile
@@ -10,7 +10,7 @@ build:
 	@cd ${ROOT_PATH} && yarn build
 
 .PHONY: typewriter-remote
-typewriter-remote: build
+typewriter-remote:
 	@echo "Generating Typewriter iOS Objective-C client..."
 	@rm -rf ${OUTPUT_PATH}
 	@mkdir -p ${OUTPUT_PATH}
@@ -24,7 +24,7 @@ typewriter-remote: build
 	@echo "Done."
 
 .PHONY: typewriter-local
-typewriter-local: build
+typewriter-local:
 	@echo "Generating Typewriter iOS Objective-C client..."
 	@rm -rf ${OUTPUT_PATH}
 	@mkdir -p ${OUTPUT_PATH}
