dist/src/index.js -> dist/index.js, since package.json is no longer included in dist

--- a/examples/android/java/Makefile
+++ b/examples/android/java/Makefile
@@ -14,7 +14,7 @@ typewriter-remote:
 	@echo "Generating Typewriter Android Java client..."
 	@rm -rf ${OUTPUT_PATH}
 	@mkdir -p ${OUTPUT_PATH}
-	@node ${ROOT_PATH}/dist/src/index.js gen-android \
+	@node ${ROOT_PATH}/dist/index.js gen-android \
 		--trackingPlanId "rs_1AnzsusuSkTIlWw7Pq7MCcmVeo2" \
     --workspaceSlug "schema-test" \
 		--token "${SEGMENT_SCHEMA_TEST_READ_ONLY_API_TOKEN}" \
@@ -29,7 +29,7 @@ typewriter-local:
 	@echo "Generating Typewriter Android Java client..."
 	@rm -rf ${OUTPUT_PATH}
 	@mkdir -p ${OUTPUT_PATH}
-	@node ${ROOT_PATH}/dist/src/index.js gen-android \
+	@node ${ROOT_PATH}/dist/index.js gen-android \
 		--inputPath ${LOCAL_INPUT_PATH} \
 		--outputPath ${OUTPUT_PATH} \
 		--package 'com.segment.analytics' \
