--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "Colin King <colin.king@segment.com> (https://colinking.co)"
   ],
   "files": [
+    "package.json",
     "dist",
     "src"
   ],
-  "main": "dist/index.js",
-  "browser": "dist/index.js",
-  "bin": "dist/index.js",
+  "main": "dist/src/index.js",
+  "browser": "dist/src/index.js",
+  "bin": "dist/src/index.js",
   "directories": {
     "lib": "src",
     "test": "tests"
@@ -47,9 +48,9 @@
     "release": "yarn build && release-it",
     "generate-examples:android": "cd examples/android/java && make typewriter-local",
     "generate-examples:ios": "cd examples/ios/objectivec && make typewriter-local",
-    "generate-examples:js": "node ./dist/index.js gen-js --inputPath ./examples/local-tracking-plans/tracking-plan-web.json --outputPath ./examples/js/pages/generated",
-    "generate-examples:ts": "node ./dist/index.js gen-ts --inputPath ./examples/local-tracking-plans/tracking-plan-web.json --outputPath ./examples/ts/pages/generated",
-    "generate-examples:node": "node ./dist/index.js gen-js --inputPath ./examples/local-tracking-plans/tracking-plan-mobile.json --outputPath ./examples/node/generated --module CommonJS --target ES2017 --client node",
+    "generate-examples:js": "node ./dist/src/index.js gen-js --inputPath ./examples/local-tracking-plans/tracking-plan-web.json --outputPath ./examples/js/pages/generated",
+    "generate-examples:ts": "node ./dist/src/index.js gen-ts --inputPath ./examples/local-tracking-plans/tracking-plan-web.json --outputPath ./examples/ts/pages/generated",
+    "generate-examples:node": "node ./dist/src/index.js gen-js --inputPath ./examples/local-tracking-plans/tracking-plan-mobile.json --outputPath ./examples/node/generated --module CommonJS --target ES2017 --client node",
     "generate-examples": "run-p generate-examples:*"
   },
   "dependencies": {
