Fix broken typewriter-js from missing package.json (#18)

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "Colin King <colin.king@segment.com> (https://colinking.co)"
   ],
   "files": [
+    "package.json",
     "dist",
     "src"
   ],
@@ -41,6 +42,7 @@
     "update-snapshots": "jest -u",
     "watch": "tsc -w",
     "build": "rm -rf dist && tsc",
+    "prepare": "yarn run build",
     "lint": "tslint src/**/*.ts",
     "precommit": "lint-staged",
     "release": "yarn build && release-it",
