Remove snapshots.d.ts in favor of upstream types

--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/ajv": "^1.0.0",
     "@types/chalk": "^2.2.0",
     "@types/jest": "^23.3.5",
+    "@types/jest-diff": "^20.0.0",
     "@types/json-schema": "^7.0.1",
     "@types/lodash": "^4.14.117",
     "@types/node": "^8.0.14",
@@ -88,7 +89,7 @@
     "@types/yargs": "^12.0.1",
     "bdd-stdin": "^0.2.0",
     "jest": "^23.6",
-    "jest-file-snapshot": "^0.2.0",
+    "jest-file-snapshot": "^0.2.1",
     "lint-staged": "^7.3.0",
     "prettier": "^1.5.3",
     "release-it": "^7.5.0",
