--- a/examples/node/package.json
+++ b/examples/node/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "DEBUG=node:* yarn start",
-    "typewriter-remote": "typewriter gen-js --trackingPlanId {YOUR_TRACKING_PLAN_ID} --workspaceSlug {YOUR_WORKSPACE_SLUG} --token {YOUR_API_TOKEN} --outputPath ./generated --module CommonJS --target ES2017",
-    "typewriter-local": "typewriter gen-js --inputPath ../local-tracking-plans/tracking-plan-mobile.json --outputPath ./generated --module CommonJS --target ES2017",
+    "preinstall": "cd ../.. && yarn link",
+    "typewriter-remote": "typewriter gen-js --trackingPlanId {YOUR_TRACKING_PLAN_ID} --workspaceSlug {YOUR_WORKSPACE_SLUG} --token {YOUR_API_TOKEN} --outputPath ./generated --module CommonJS --target ES2017 --client node",
+    "typewriter-local": "typewriter gen-js --inputPath ../local-tracking-plans/tracking-plan-mobile.json --outputPath ./generated --module CommonJS --target ES2017 --client node",
     "generate": "yarn run typewriter-local"
   },
   "dependencies": {
@@ -19,8 +20,5 @@
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
     "uuid": "^3.3.2"
-  },
-  "devDependencies": {
-    "typewriter": "^3.1.3"
   }
 }
