[SCH-1233] Fix broken builds after releases (#21)
This PR configures `release-it` to update the tests and examples upon release. This was previously a problem, since both the examples and test contain the version number which would fall out of date. This caused tests to fail after every release (or some jiggering to update these files before tagging+releasing).

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "prepare": "yarn run build",
     "lint": "tslint src/**/*.ts",
     "precommit": "lint-staged",
-    "release": "yarn build && release-it",
+    "release": "yarn test && release-it",
     "generate-examples:android": "cd examples/android/java && make typewriter-local",
     "generate-examples:ios": "cd examples/ios/objectivec && make typewriter-local",
     "generate-examples:js": "cd ./examples/js && yarn && yarn run typewriter-local",
