--- a/examples/node/package.json
+++ b/examples/node/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "DEBUG=node:* yarn start",
-    "preinstall": "cd ../.. && yarn link",
+    "preinstall": "cd ../.. && npm link",
     "typewriter-remote": "typewriter gen-js --trackingPlanId {YOUR_TRACKING_PLAN_ID} --workspaceSlug {YOUR_WORKSPACE_SLUG} --token {YOUR_API_TOKEN} --outputPath ./generated --module CommonJS --target ES2017 --client node",
     "typewriter-local": "typewriter gen-js --inputPath ../local-tracking-plans/tracking-plan-mobile.json --outputPath ./generated --module CommonJS --target ES2017 --client node",
     "generate": "yarn run typewriter-local"
