--- a/examples/js/package.json
+++ b/examples/js/package.json
@@ -4,10 +4,9 @@
   "description": "Example app showcasing Typewriter in Javascript",
   "scripts": {
     "build": "yarn run typewriter-local && next build",
-    "preinstall": "cd ../.. && npm link",
     "dev": "yarn run typewriter-local && next",
-    "typewriter-remote": "typewriter gen-js --trackingPlanId {YOUR_TRACKING_PLAN_ID} --workspaceSlug {YOUR_WORKSPACE_SLUG} --token {YOUR_API_TOKEN} --outputPath ./pages/generated",
-    "typewriter-local": "typewriter gen-js --inputPath ../local-tracking-plans/tracking-plan-web.json --outputPath ./pages/generated",
+    "typewriter-remote": "node ../../dist/src/index.js gen-js --trackingPlanId {YOUR_TRACKING_PLAN_ID} --workspaceSlug {YOUR_WORKSPACE_SLUG} --token {YOUR_API_TOKEN} --outputPath ./pages/generated",
+    "typewriter-local": "node ../../dist/src/index.js gen-js --inputPath ../local-tracking-plans/tracking-plan-web.json --outputPath ./pages/generated",
     "generate": "yarn run typewriter-local"
   },
   "keywords": [],
