--- a/examples/ts/package.json
+++ b/examples/ts/package.json
@@ -5,9 +5,8 @@
     "dev": "npm run typewriter-local && next",
     "build": "npm run typewriter-local && next build",
     "start": "next start",
-    "preinstall": "cd ../.. && npm link",
-    "typewriter-remote": "typewriter gen-ts --trackingPlanId {YOUR_TRACKING_PLAN_ID} --workspaceSlug {YOUR_WORKSPACE_SLUG} --token {YOUR_API_TOKEN} --outputPath ./pages/generated",
-    "typewriter-local": "typewriter gen-ts --inputPath ../local-tracking-plans/tracking-plan-web.json --outputPath ./pages/generated",
+    "typewriter-remote": "node ../../dist/src/index.js gen-ts --trackingPlanId {YOUR_TRACKING_PLAN_ID} --workspaceSlug {YOUR_WORKSPACE_SLUG} --token {YOUR_API_TOKEN} --outputPath ./pages/generated",
+    "typewriter-local": "node ../../dist/src/index.js gen-ts --inputPath ../local-tracking-plans/tracking-plan-web.json --outputPath ./pages/generated",
     "generate": "yarn run typewriter-local"
   },
   "dependencies": {
