--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
     "release": "yarn test && release-it",
     "generate-examples:android": "cd examples/android/java && make typewriter-local",
     "generate-examples:ios": "cd examples/ios/objectivec && make typewriter-local",
-    "generate-examples:js": "cd ./examples/js && yarn && yarn run typewriter-local",
-    "generate-examples:ts": "cd ./examples/ts && yarn && yarn run typewriter-local",
-    "generate-examples:node": "cd ./examples/node && yarn && yarn run typewriter-local",
+    "generate-examples:js": "cd ./examples/js && yarn run typewriter-local",
+    "generate-examples:ts": "cd ./examples/ts && yarn run typewriter-local",
+    "generate-examples:node": "cd ./examples/node && yarn run typewriter-local",
     "generate-examples": "run-p generate-examples:*"
   },
   "dependencies": {
