--- a/package.json
+++ b/package.json
@@ -48,8 +48,9 @@
     "release": "yarn test && release-it",
     "generate-examples:android": "cd examples/android/java && make typewriter-local",
     "generate-examples:ios": "cd examples/ios/objectivec && make typewriter-local",
-    "generate-examples:js": "cd ./examples/js && yarn run typewriter-local",
-    "generate-examples:ts": "cd ./examples/ts && yarn run typewriter-local",
+    "generate-examples:js": "cd ./examples/web/js && yarn run typewriter-local",
+    "generate-examples:ts": "cd ./examples/web/ts && yarn run typewriter-local",
+    "generate-examples:reasonml": "cd ./examples/web/reasonml && yarn run typewriter-local",
     "generate-examples:node": "cd ./examples/node && yarn run typewriter-local",
     "generate-examples": "run-p generate-examples:*"
   },
@@ -67,6 +68,7 @@
     "omit-deep-lodash": "^1.1.2",
     "quicktype": "^15.0.144",
     "quicktype-core": "^6.0.2",
+    "reasonably-typed": "^0.13",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "ts-node": "^6.1.0",
