--- a/.release-it.json
+++ b/.release-it.json
@@ -1,3 +1,7 @@
 {
-  "buildCommand": "yarn build && yarn generate-examples && yarn test -u"
+  "buildCommand": "yarn build && yarn generate-examples && yarn test -u",
+  "increment": "conventional:angular",
+  "beforeChangelogCommand": "conventional-changelog --preset angular --infile CHANGELOG.md --same-file",
+  "changelogCommand": "conventional-changelog --preset angular | tail -n +3",
+  "safeBump": false
 }
