--- a/package.json
+++ b/package.json
@@ -134,7 +134,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS && printf \"\n\n\""
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS; printf \"\n\n\""
     }
   },
   "commitlint": {
