--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "ajv": "^6.5.4",
     "chalk": "^2.0.1",
     "handlebars": "^4.0.11",
-    "husky": "^0.14.3",
+    "husky": "^1.1.3",
     "json-schema": "^0.2.3",
     "json-schema-to-typescript": "^5.5.0",
     "lodash": "^4.17.10",
@@ -88,6 +88,10 @@
     "@types/typescript": "^2.0.0",
     "@types/yargs": "^12.0.1",
     "bdd-stdin": "^0.2.0",
+    "commitlint": "^7.2.1",
+    "commitlint-config-angular": "^7.1.2",
+    "conventional-changelog": "^3.0.5",
+    "conventional-changelog-cli": "^2.0.11",
     "jest": "^23.6",
     "jest-file-snapshot": "^0.2.1",
     "lint-staged": "^7.3.0",
@@ -129,8 +133,14 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS; printf \"\n\n\""
     }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-angular"
+    ]
   },
   "jest": {
     "moduleFileExtensions": [
