fix: remove typewriter-remote

--- a/examples/android/java/Makefile
+++ b/examples/android/java/Makefile
@@ -1,4 +1,4 @@
-.DEFAULT_GOAL: typewriter-local
+.DEFAULT_GOAL: typewriter
 
 ROOT_PATH := ../../..
 LOCAL_INPUT_PATH := ${ROOT_PATH}/examples/local-tracking-plans/tracking-plan-mobile.json
@@ -9,30 +9,17 @@ build:
 	@echo "Building Typewriter..."
 	@cd ${ROOT_PATH} && yarn build
 
-.PHONY: typewriter-remote
-typewriter-remote:
+.PHONY: typewriter
+typewriter:
 	@echo "Generating Typewriter Android Java client..."
 	@rm -rf ${OUTPUT_PATH}
 	@mkdir -p ${OUTPUT_PATH}
-	@node ${ROOT_PATH}/dist/src/index.js gen-android \
-		--trackingPlanId "rs_1AnzsusuSkTIlWw7Pq7MCcmVeo2" \
-    --workspaceSlug "schema-test" \
-		--token "${SEGMENT_SCHEMA_TEST_READ_ONLY_API_TOKEN}" \
-		--outputPath ${OUTPUT_PATH} \
-		--package 'com.segment.analytics' \
-		--language 'java' \
-		--trackingPlan 'Kicks App'
-	@echo "Done."
 
-.PHONY: typewriter-local
-typewriter-local:
-	@echo "Generating Typewriter Android Java client..."
-	@rm -rf ${OUTPUT_PATH}
-	@mkdir -p ${OUTPUT_PATH}
 	@node ${ROOT_PATH}/dist/src/index.js gen-android \
 		--inputPath ${LOCAL_INPUT_PATH} \
 		--outputPath ${OUTPUT_PATH} \
 		--package 'com.segment.analytics' \
 		--language 'java' \
 		--trackingPlan 'Kicks App'
+
 	@echo "Done."
