--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "lint": "tslint src/**/*.ts",
     "precommit": "lint-staged",
     "release": "yarn test && release-it",
-    "sync-fixtures:examples-standard": "yarn start sync --trackingPlanId \"rs_1AnzsusuSkTIlWw7Pq7MCcmVeo2\" --workspaceSlug \"schema-test\" --token \"${SEGMENT_SCHEMA_TEST_READ_ONLY_API_TOKEN}\" --outputPath ./examples/local-tracking-plans/tracking-plan-mobile.json",
-    "sync-fixtures:examples-slothgram": "yarn start sync --trackingPlanId \"rs_1CawusBJdQmYmspt8rWXtdb7COT\" --workspaceSlug \"schema-test\" --token \"${SEGMENT_SCHEMA_TEST_READ_ONLY_API_TOKEN}\" --outputPath ./examples/local-tracking-plans/tracking-plan-web.json",
-    "sync-fixtures:test": "yarn start sync --trackingPlanId \"rs_1BRLuNotOa7lgAVEib6r12Vp9lv\" --workspaceSlug \"schema-test\" --token \"${SEGMENT_SCHEMA_TEST_READ_ONLY_API_TOKEN}\" --outputPath ./tests/__fixtures__/tracking-plan-fixture.json",
+    "sync-fixtures:examples-standard": "yarn start sync --trackingPlanId 'rs_1AnzsusuSkTIlWw7Pq7MCcmVeo2' --workspaceSlug 'schema-test' --token \"${SEGMENT_SCHEMA_TEST_READ_ONLY_API_TOKEN}\" --outputPath ./examples/local-tracking-plans/tracking-plan-mobile.json",
+    "sync-fixtures:examples-slothgram": "yarn start sync --trackingPlanId 'rs_1CawusBJdQmYmspt8rWXtdb7COT' --workspaceSlug 'schema-test' --token \"${SEGMENT_SCHEMA_TEST_READ_ONLY_API_TOKEN}\" --outputPath ./examples/local-tracking-plans/tracking-plan-web.json",
+    "sync-fixtures:test": "yarn start sync --trackingPlanId 'rs_1BRLuNotOa7lgAVEib6r12Vp9lv' --workspaceSlug 'schema-test' --token \"${SEGMENT_SCHEMA_TEST_READ_ONLY_API_TOKEN}\" --outputPath ./tests/__fixtures__/tracking-plan-fixture.json",
     "sync-fixtures": "run-p sync-fixtures:*",
     "generate-examples:android": "cd examples/android/java && make typewriter",
     "generate-examples:ios": "cd examples/ios/objectivec && make typewriter",
