--- a/examples/gen-android/java/app/src/main/AndroidManifest.xml
+++ b/examples/gen-android/java/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.segment.typewriterexample">
 
     <application
+        android:name=".TypewriterApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
