--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "tslint-config-standard": "^7.0.0",
     "tslint-plugin-prettier": "^2.0.0",
     "typescript": "^3.1.1",
-    "yarn-run-all": "^3.1.1"
+    "npm-run-all": "^4.1.5"
   },
   "engines": {
     "node": ">=8"
