--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "request-promise-native": "^1.0.5",
     "sort-keys": "^2.0.0",
     "ts-node": "^6.1.0",
+    "typescript": "^3.2.2",
     "yargs": "^12.0.2"
   },
   "devDependencies": {
@@ -100,6 +101,7 @@
     "jest": "^23.6",
     "jest-file-snapshot": "^0.2.1",
     "lint-staged": "^7.3.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.5.3",
     "release-it": "^7.5.0",
     "test": "^0.6.0",
@@ -107,9 +109,7 @@
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
     "tslint-config-standard": "^7.0.0",
-    "tslint-plugin-prettier": "^2.0.0",
-    "typescript": "^3.1.1",
-    "npm-run-all": "^4.1.5"
+    "tslint-plugin-prettier": "^2.0.0"
   },
   "engines": {
     "node": ">=8"
