--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "generate-examples:js": "cd ./examples/gen-js/js && yarn run typewriter",
     "generate-examples:ts": "cd ./examples/gen-js/ts && yarn run typewriter",
     "generate-examples:node": "cd ./examples/gen-js/node && yarn run typewriter",
-    "generate-examples": "run-p generate-examples:*"
+    "generate-examples": "yarn run build && run-p generate-examples:*"
   },
   "dependencies": {
     "@nucleartide/dx": "^1.0.0",
