--- a/.gitignore
+++ b/.gitignore
@@ -76,4 +76,8 @@ package-lock.json
 
 .vscode
 
-examples/local-tracking-plans/experiment.json
+# Whitelist the two Tracking Plans we use for examples, so that we can test
+# our example apps with other Tracking Plans without accidentally committing.
+examples/local-tracking-plans/*
+!examples/local-tracking-plans/tracking-plan.json
+!examples/local-tracking-plans/tracking-plan-slothgram.json
