fix: import Properties and use com.segment.generated to avoid collision

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,5 @@ package-lock.json
 examples/local-tracking-plans/*
 !examples/local-tracking-plans/tracking-plan.json
 !examples/local-tracking-plans/tracking-plan-slothgram.json
+
+tmp
