--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Created by https://www.gitignore.io/api/node
-
-### Node ###
 # Logs
 logs
 *.log
@@ -60,9 +57,6 @@ typings/
 # dotenv environment variables file
 .env
 
-
-# End of https://www.gitignore.io/api/node
-
 dist
 
 .next
@@ -74,10 +68,5 @@ dist
 # We use yarn.lock
 package-lock.json
 
+# VSCode
 .vscode
-
-# Whitelist the two Tracking Plans we use for examples, so that we can test
-# our example apps with other Tracking Plans without accidentally committing.
-examples/local-tracking-plans/*
-!examples/local-tracking-plans/tracking-plan.json
-!examples/local-tracking-plans/tracking-plan-slothgram.json
