--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"eslint": "^5.16.0",
 		"eslint-config-prettier": "^4.1.0",
 		"eslint-plugin-prettier": "^3.0.1",
+		"husky": "^2.1.0",
 		"jest": "^24.7.1",
 		"prettier": "^1.16.4",
 		"ts-jest": "^24.0.2",
