--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,14 @@
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
-    "resolveJsonModule": true
+    "allowJs": false,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "paths": {
+      "src": [
+        "src/*"
+      ]
+    }
   },
   "include": [
     "src/**/*",
