--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"@types/json-schema": "^7.0.3",
 		"@types/lodash": "^4.14.123",
 		"@types/node": "^11.13.6",
+		"@types/node-fetch": "^2.3.3",
 		"@types/prettier": "^1.16.3",
 		"@typescript-eslint/eslint-plugin": "^1.6.0",
 		"@typescript-eslint/parser": "^1.6.0",
@@ -84,6 +85,7 @@
 		"handlebars": "^4.1.2",
 		"ink": "^2.1.1",
 		"lodash": "^4.17.11",
+		"node-fetch": "^2.5.0",
 		"prettier": "^1.17.0",
 		"prop-types": "^15.7.2",
 		"react": "^16.8.6",
