--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 	},
 	"devDependencies": {
 		"@types/jest": "^24.0.11",
+		"@types/js-yaml": "^3.12.1",
 		"@types/json-schema": "^7.0.3",
 		"@types/lodash": "^4.14.123",
 		"@types/node": "^11.13.6",
@@ -80,10 +81,10 @@
 		"typescript": "^3.4.2"
 	},
 	"dependencies": {
-		"@iarna/toml": "^2.2.3",
 		"caller-path": "^2.0.0",
 		"handlebars": "^4.1.2",
 		"ink": "^2.1.1",
+		"js-yaml": "^3.13.1",
 		"lodash": "^4.17.11",
 		"node-fetch": "^2.5.0",
 		"prettier": "^1.17.0",
