--- a/typewriter.yml
+++ b/typewriter.yml
@@ -5,17 +5,17 @@
 # or a shell command, like below, for whatever secret management tooling your team uses.
 # At Segment, We use segmentio/chamber for secret management: https://github.com/segmentio/chamber
 # Along with segmentio/aws-okta to perform SSO with Okta: https://github.com/segmentio/aws-okta
-tokenCommand = 'aws-okta exec dev-privileged -- chamber export app | jq -r .typewriter_segment_prod_token'
 
-[language]
-name = 'typescript'
+tokenCommand: aws-okta exec dev-privileged -- chamber export app | jq -r .typewriter_segment_prod_token
 
-# App Tracking Plan
-# https://app.segment.com/segment_prod/protocols/tracking-plans/rs_16W7KaDjpZ09dI341chHKgYJah9
-[[trackingPlans]]
-id = 'rs_16W7KaDjpZ09dI341chHKgYJah9'
-workspaceSlug = 'segment_prod'
+language:
+  name: typescript
 
-[trackingPlans.events]
-'Tracking Plan Created' = 'latest'
-'Tracking Plan Saved' = 'latest'
+trackingPlans:
+    # App Tracking Plan
+    # https://app.segment.com/segment_prod/protocols/tracking-plans/rs_16W7KaDjpZ09dI341chHKgYJah9
+  - id: rs_16W7KaDjpZ09dI341chHKgYJah9
+    workspaceSlug: segment_prod
+    events:
+      Tracking Plan Created: latest
+      Tracking Plan Saved: latest
