--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typewriter",
-  "version": "7.0.0",
+  "version": "6.1.3",
   "description": "A compiler for generating strongly typed analytics clients via Segment Protocols",
   "repository": "ssh://git@github.com/segmentio/typewriter.git",
   "homepage": "https://github.com/segmentio/typewriter",
@@ -15,7 +15,8 @@
     "test": "jest",
     "lint": "eslint './src/**/*.{ts,tsx}'",
     "precommit": "lint-staged",
-    "release": "np"
+    "release": "np",
+    "prerelease": "np --any-branch --tag next"
   },
   "engines": {
     "node": ">=0.10.15"
@@ -37,6 +38,7 @@
     "husky": "^2.1.0",
     "jest": "^24.7.1",
     "lint-staged": "^8.1.7",
+    "np": "^5.0.1",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.1.0",
     "tsconfig-paths": "^3.8.0",
