--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^11.13.6",
     "@types/node-fetch": "^2.3.3",
     "@types/prettier": "^1.16.3",
+    "@types/prompts": "^2.4.0",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
     "eslint": "^5.16.0",
@@ -53,6 +54,7 @@
     "lodash": "^4.17.11",
     "node-fetch": "^2.5.0",
     "prettier": "^1.17.0",
+    "prompts": "^2.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "yargs": "^13.2.2"
